@@ -1,42 +1,47 @@
 package nebula.plugin.responsible
 
-import nebula.test.IntegrationSpec
+class NebulaFacetPluginLauncherSpec extends BaseIntegrationTestKitSpec {
 
-class NebulaFacetPluginLauncherSpec extends IntegrationSpec {
     def 'tasks get run'() {
         createFile('src/examples/java/Hello.java') << 'public class Hello {}'
 
         buildFile << """
-            apply plugin: 'java'
-            ${applyPlugin(NebulaFacetPlugin)}
+            plugins {
+                id 'java'
+                id 'com.netflix.nebula.facet'
+            }
             facets {
                 example
             }
         """
 
         when:
-        def result = runTasksSuccessfully( 'build' )
+        def result = runTasks( 'build' )
 
         then:
-        result.wasExecuted(':exampleClasses')
+        result.task(':exampleClasses').outcome
     }
 
     def "configures Idea project files for a custom test facet"() {
         when:
         MavenRepoFixture mavenRepoFixture = new MavenRepoFixture(new File(projectDir, 'build'))
         mavenRepoFixture.generateMavenRepoDependencies(['foo:bar:2.4', 'custom:baz:5.1.27'])
+        //  IDEA plugin does not support configuration cache
+        new File(projectDir, 'gradle.properties').text = '''org.gradle.configuration-cache=false'''.stripIndent()
 
         buildFile << """
-            apply plugin: 'java'
-            ${applyPlugin(NebulaFacetPlugin)}
-            apply plugin: 'idea'
+            plugins {
+                id 'java'
+                id 'com.netflix.nebula.facet'
+                id 'idea'
+            }
 
             facets {
                 functionalTest
             }
 
             repositories {
-                maven { url '$mavenRepoFixture.mavenRepoDir.canonicalPath' }
+                maven { url = '$mavenRepoFixture.mavenRepoDir.canonicalPath' }
             }
 
             dependencies {
@@ -47,7 +52,7 @@ class NebulaFacetPluginLauncherSpec extends IntegrationSpec {
 
         writeHelloWorld('nebula.plugin.plugin')
         writeTest('src/functionalTest/java/', 'nebula.plugin.plugin', false)
-        runTasksSuccessfully('idea')
+        runTasks('idea')
 
         then:
         File ideaModuleFile = new File(projectDir, "${moduleName}.iml")
@@ -65,18 +70,22 @@ class NebulaFacetPluginLauncherSpec extends IntegrationSpec {
         when:
         MavenRepoFixture mavenRepoFixture = new MavenRepoFixture(new File(projectDir, 'build'))
         mavenRepoFixture.generateMavenRepoDependencies(['foo:bar:2.4', 'custom:baz:5.1.27'])
+        //  IDEA plugin does not support configuration cache
+        new File(projectDir, 'gradle.properties').text = '''org.gradle.configuration-cache=false'''.stripIndent()
 
         buildFile << """
-            apply plugin: 'java'
-            ${applyPlugin(NebulaFacetPlugin)}
-            apply plugin: 'idea'
+            plugins {
+                id 'java'
+                id 'com.netflix.nebula.facet'
+                id 'idea'
+            }
 
             facets {
                 myCustom
             }
 
             repositories {
-                maven { url '$mavenRepoFixture.mavenRepoDir.canonicalPath' }
+                maven { url = '$mavenRepoFixture.mavenRepoDir.canonicalPath' }
             }
 
             dependencies {
@@ -87,7 +96,7 @@ class NebulaFacetPluginLauncherSpec extends IntegrationSpec {
 
         writeHelloWorld('nebula.plugin.plugin')
         writeTest('src/myCustom/java/', 'nebula.plugin.plugin', false)
-        runTasksSuccessfully('idea')
+        runTasks('idea')
 
         then:
         File ideaModuleFile = new File(projectDir, "${moduleName}.iml")
@@ -105,10 +114,14 @@ class NebulaFacetPluginLauncherSpec extends IntegrationSpec {
         when:
         MavenRepoFixture mavenRepoFixture = new MavenRepoFixture(new File(projectDir, 'build'))
         mavenRepoFixture.generateMavenRepoDependencies(['foo:bar:2.4', 'custom:baz:5.1.27'])
+        //  IDEA plugin does not support configuration cache
+        new File(projectDir, 'gradle.properties').text = '''org.gradle.configuration-cache=false'''.stripIndent()
 
         buildFile << """
-            ${applyPlugin(NebulaFacetPlugin)}
-            apply plugin: 'idea'
+           plugins {
+                id 'com.netflix.nebula.facet'
+                id 'idea'
+            }
 
             facets {
                 myCustom
@@ -117,7 +130,7 @@ class NebulaFacetPluginLauncherSpec extends IntegrationSpec {
             apply plugin: 'java'
 
             repositories {
-                maven { url '$mavenRepoFixture.mavenRepoDir.canonicalPath' }
+                maven { url = '$mavenRepoFixture.mavenRepoDir.canonicalPath' }
             }
 
             dependencies {
@@ -126,7 +139,7 @@ class NebulaFacetPluginLauncherSpec extends IntegrationSpec {
             }
         """
 
-        runTasksSuccessfully('idea')
+        runTasks('idea')
 
         then:
         noExceptionThrown()
@@ -228,19 +241,12 @@ public class HelloTest {
 
 
         buildFile << """
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.5.RELEASE")
-    }
-}
-
-apply plugin: 'java'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-${applyPlugin(NebulaFacetPlugin)}
+            plugins {
+                id 'java'
+                id 'com.netflix.nebula.facet'
+                id 'org.springframework.boot' version '2.7.11'
+                 id "io.spring.dependency-management" version "1.1.3"
+            }
 
             repositories {
                 mavenCentral() 
@@ -256,25 +262,34 @@ ${applyPlugin(NebulaFacetPlugin)}
                     parentSourceSet = 'test'
                 }
             }
+            tasks.withType(Test) {
+                if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)) {
+                    jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED", "--add-opens", "java.base/java.lang=ALL-UNNAMED")
+                }
+            }
         """
-
+        //Spring Boot 2.x gradle plugin uses deprecated features
+        System.setProperty('ignoreDeprecations', 'true')
+        
         when:
-        def result = runTasksSuccessfully( 'smokeTest' )
+        def result = runTasks( 'smokeTest' )
 
         then:
-        result.wasExecuted(':smokeTest')
+        result.task(':smokeTest').outcome
     }
 
     def 'makes sure we can extend annotationProcessor configurations'() {
         buildFile << """
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-}
+            buildscript {
+                repositories {
+                    mavenCentral()
+                }
+            }
 
-apply plugin: 'java'
-${applyPlugin(NebulaFacetPlugin)}
+            plugins {
+                id 'java'
+                id 'com.netflix.nebula.facet'
+            }
 
             repositories {
                 mavenCentral() 
@@ -291,24 +306,25 @@ ${applyPlugin(NebulaFacetPlugin)}
         """
 
         when:
-        def result = runTasksSuccessfully( 'dependencies', '--configuration', 'smokeTestAnnotationProcessor' )
+        def result = runTasks( 'dependencies', '--configuration', 'smokeTestAnnotationProcessor' )
 
         then:
-        result.standardOutput.contains("""smokeTestAnnotationProcessor - Annotation processors and their dependencies for source set 'smoke test'.
-\\--- junit:junit:4.12""")
+        result.output.contains("""smokeTestAnnotationProcessor - Annotation processors and their dependencies for source set 'smoke test'.""")
+        result.output.contains("""--- junit:junit:4.12""")
     }
 
     def 'makes sure we can extend compileOnly configurations'() {
         buildFile << """
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-}
+            buildscript {
+                repositories {
+                    mavenCentral()
+                }
+            }
 
-apply plugin: 'java'
-${applyPlugin(NebulaFacetPlugin)}
-
+            plugins {
+                id 'java'
+                id 'com.netflix.nebula.facet'
+            }
             repositories {
                 mavenCentral() 
             }
@@ -322,10 +338,10 @@ ${applyPlugin(NebulaFacetPlugin)}
         """
 
         when:
-        def result = runTasksSuccessfully( 'dependencies', '--configuration', 'smokeTestCompileClasspath' )
+        def result = runTasks( 'dependencies', '--configuration', 'smokeTestCompileClasspath' )
 
         then:
-        result.standardOutput.contains("\\--- junit:junit:4.12")
+        result.output.contains("\\--- junit:junit:4.12")
     }
 
     def 'test based facet'() {
@@ -334,16 +350,18 @@ ${applyPlugin(NebulaFacetPlugin)}
         mavenRepoFixture.generateMavenRepoDependencies(['foo:bar:2.4', 'custom:baz:5.1.27'])
 
         buildFile << """
-            apply plugin: 'java'
-            ${applyPlugin(NebulaFacetPlugin)}
-            apply plugin: 'idea'
+            plugins {
+                id 'java'
+                id 'com.netflix.nebula.facet'
+                id 'idea'
+            }
 
             facets {
                 functionalTest
             }
 
             repositories {
-                maven { url '$mavenRepoFixture.mavenRepoDir.canonicalPath' }
+                maven { url = '$mavenRepoFixture.mavenRepoDir.canonicalPath' }
             }
 
             dependencies {
@@ -351,11 +369,11 @@ ${applyPlugin(NebulaFacetPlugin)}
                 functionalTestRuntimeOnly 'custom:baz:5.1.27'
             }
         """
-        def result = runTasksSuccessfully('check', '--dry-run')
+        def result = runTasks('check', '--dry-run')
 
         then:
-        result.standardOutput.contains(":functionalTest SKIPPED")
-        result.standardOutput.contains(":functionalTestClasses SKIPPED")
+        result.output.contains(":functionalTest SKIPPED")
+        result.output.contains(":functionalTestClasses SKIPPED")
     }
 
     def 'makes sure we can have a parent source set with was created by facet plugin'() {
@@ -454,19 +472,12 @@ public class HelloTest {
 
 
         buildFile << """
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.5.RELEASE")
-    }
-}
-
-apply plugin: 'java'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-${applyPlugin(NebulaFacetPlugin)}
+        plugins {
+                id 'java'
+                id 'com.netflix.nebula.facet'
+                id 'org.springframework.boot' version '2.7.12'
+                 id "io.spring.dependency-management" version "1.1.3"
+            }
 
             repositories {
                 mavenCentral() 
@@ -485,20 +496,29 @@ ${applyPlugin(NebulaFacetPlugin)}
                     parentSourceSet = 'smokeTest'
                 }
             }
+            tasks.withType(Test) {
+                if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)) {
+                    jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED", "--add-opens", "java.base/java.lang=ALL-UNNAMED")
+                }
+            }
         """
+        //Spring Boot 2.x gradle plugin uses deprecated features
+        System.setProperty('ignoreDeprecations', 'true')
 
         when:
-        def result = runTasksSuccessfully( 'specializedSmokeTest' )
+        def result = runTasks( 'specializedSmokeTest' )
 
         then:
-        result.wasExecuted(':specializedSmokeTest')
+        result.task(':specializedSmokeTest').outcome
     }
 
     def 'facet plugin properly consumes parents source sets outputs when groovy plugin is used'() {
         given:
         buildFile << """
-            apply plugin: 'groovy'
-            ${applyPlugin(NebulaFacetPlugin)}
+            plugins {
+                id 'groovy'
+                id 'com.netflix.nebula.facet'
+            }
 
             repositories {
                 mavenCentral()
@@ -534,17 +554,19 @@ ${applyPlugin(NebulaFacetPlugin)}
         """, "src/functionalTest/groovy")
 
         when:
-        def result = runTasksSuccessfully("functionalTest")
+        def result = runTasks("functionalTest")
 
         then:
-        result.wasExecuted("functionalTest")
+        result.task(":functionalTest").outcome
     }
 
     def 'current facets resources are read first before parent source sets'() {
         given:
         buildFile << """
-            apply plugin: 'groovy'
-            ${applyPlugin(NebulaFacetPlugin)}
+            plugins {
+                id 'java'
+                id 'com.netflix.nebula.facet'
+            }
 
             repositories {
                 mavenCentral()
@@ -562,7 +584,7 @@ ${applyPlugin(NebulaFacetPlugin)}
             
             project.tasks.withType(Test) {
                 afterTest { descriptor ->
-                    logger.lifecycle("Running test: " + descriptor)
+                    println("Running test: " + descriptor)
                 }
             }
             
@@ -615,20 +637,22 @@ ${applyPlugin(NebulaFacetPlugin)}
         addResource("src/functionalTest/resources", "foo.properties", "myprop=4")
 
         when:
-        def result = runTasksSuccessfully("check")
+        def result = runTasks("check")
 
         then:
-        result.standardOutput.contains("Running test: Test test(MyClassTest)")
-        result.standardOutput.contains("Running test: Test test(MyClassFunctionalTest)")
-        result.wasExecuted("test")
-        result.wasExecuted("functionalTest")
+        result.output.contains("Running test: Test test(MyClassTest)")
+        result.output.contains("Running test: Test test(MyClassFunctionalTest)")
+        result.task(":test").outcome
+        result.task(":functionalTest").outcome
     }
 
     def 'works with java-library-plugin'() {
         given:
         buildFile << """
-            apply plugin: 'java-library'
-            ${applyPlugin(NebulaFacetPlugin)}
+            plugins {
+                id 'java'
+                id 'com.netflix.nebula.facet'
+            }
 
             repositories {
                 mavenCentral()
@@ -646,7 +670,7 @@ ${applyPlugin(NebulaFacetPlugin)}
             
             project.tasks.withType(Test) {
                 afterTest { descriptor ->
-                    logger.lifecycle("Running test: " + descriptor)
+                    println("Running test: " + descriptor)
                 }
             }
             
@@ -699,33 +723,23 @@ ${applyPlugin(NebulaFacetPlugin)}
         addResource("src/functionalTest/resources", "foo.properties", "myprop=4")
 
         when:
-        def result = runTasksSuccessfully("check")
+        def result = runTasks("check")
 
         then:
-        result.standardOutput.contains("Running test: Test test(MyClassTest)")
-        result.standardOutput.contains("Running test: Test test(MyClassFunctionalTest)")
-        result.wasExecuted("test")
-        result.wasExecuted("functionalTest")
+        result.output.contains("Running test: Test test(MyClassTest)")
+        result.output.contains("Running test: Test test(MyClassFunctionalTest)")
+        result.task(":test").outcome
+        result.task(":functionalTest").outcome
     }
 
     def 'works with kotlin'() {
         given:
         buildFile << """
-            buildscript {
-                def kotlinVersion = '1.6.21'
-                repositories {
-                    maven {
-                      url "https://plugins.gradle.org/m2/"
-                    }
-                  }
-                dependencies {
-                    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:\$kotlinVersion"
-                }
+            plugins {
+                id 'java'
+                id 'org.jetbrains.kotlin.jvm' version '1.9.20'
+                id 'com.netflix.nebula.facet'
             }
-            apply plugin: 'java-library'
-            apply plugin: "org.jetbrains.kotlin.jvm"
-            ${applyPlugin(NebulaFacetPlugin)}
-
             repositories {
                 mavenCentral()
             }
@@ -742,7 +756,7 @@ ${applyPlugin(NebulaFacetPlugin)}
             
             project.tasks.withType(Test) {
                 afterTest { descriptor ->
-                    logger.lifecycle("Running test: " + descriptor)
+                    println("Running test: " + descriptor)
                 }
             }
             
@@ -795,12 +809,12 @@ ${applyPlugin(NebulaFacetPlugin)}
         addResource("src/functionalTest/resources", "foo.properties", "myprop=4")
 
         when:
-        def result = runTasksSuccessfully("check")
+        def result = runTasks("check")
 
         then:
-        result.standardOutput.contains("Running test: Test test(MyClassTest)")
-        result.standardOutput.contains("Running test: Test test(MyClassFunctionalTest)")
-        result.wasExecuted("test")
-        result.wasExecuted("functionalTest")
+        result.output.contains("Running test: Test test(MyClassTest)")
+        result.output.contains("Running test: Test test(MyClassFunctionalTest)")
+        result.task(":test").outcome
+        result.task(":functionalTest").outcome
     }
 }
